tests/compilefail11.out
[1mtests/compilefail11.pas:16:12: [0m[1m[91merror:[0m Procedure two cannot be used as parameter to one()
    16 | 	i:=one(two(7));